# MailStat

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: actions.rs  content.rs  db.rs  demo.rs  lib.rs  mailmeta.rs  main.rs  models.rs  queries.rs  scan.rs  secrets.rs
src-tauri/tests/: data_layer.rs
src/components/: AddAccountModal.tsx  ConfirmDialog.tsx  FolderTree.tsx  MessageDetail.tsx  ResizeHandle.tsx  TopPanel.tsx  Treemap.tsx  TypeLegend.tsx
src/lib/: api.ts  colors.ts  format.ts  mock.ts
