[package]
name = "mailstat"
version = "0.1.0"
description = "A mailbox space analyzer. Treemap your email, then clean it up."
authors = ["Abhiram Ramachandran"]
edition = "2021"
license = "MIT"

[lib]
name = "mailstat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
imap = "3.0.0-alpha.15"
imap-proto = "0.16"
native-tls = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mailparse = "0.15"
chrono = "0.4"
thiserror = "2"
rand = "0.8"
ammonia = "4"

[profile.dev]
opt-level = 1
